--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
      </head>
      <body>
          <header>
-             <div class="'encabezado">
-                <div class="logo">
-               <img src="images/logo.png">
-               <h1 id="titulologo">Encriptador de texto</h1>
-                </div>
-                <label class="switch">
-                <input type="checkbox" id="toggleSwitch">
-                <span class="slider round"></span>
-               <p class="switchLabel" id="desc-boton">Activar modo PRO</p>
-                </label>
-             </div>
-           </header>
-     
+                  <div class="logo">
+                      <img src="images/logo.png">
+                      <h1 id="titulologo">Encriptador de texto</h1>
+                   </div>
+                   <div class="switchconte">             
+                      <label class="switch">
+                        <input type="checkbox" id="toggleSwitch">
+                        <span class="slider round"></span>
+                      </label>
+                        <p class="switchLabel" id="desc-boton">Activar modo PRO</p>
+                    </div>
+         </header>
+                  
        <div class="contenedor">
          <div class="izquierda">
              <div class="textoinput">
