--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Encriptador de texto</title>
         <link rel="icon" href="images/logo.png" type="image/x-icon">
+        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
      </head>
@@ -20,8 +21,9 @@
                       </label>
                         <p class="switchLabel" id="desc-boton">Activar modo PRO</p>
                     </div>
-         </header>
                   
+           </header>
+     
        <div class="contenedor">
          <div class="izquierda">
              <div class="textoinput">
